food and sound added

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@ body{
 .head{
     background-color: red;
 }
-.food{
+.snake-body{
     background-color: purple;
+}
+.food{
+    background-color: yellow;
 }
