--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
     margin: 0;
 }
 body{
-    /* background: url("../Images/bg.jpg"); */
     background-color: #3fcd3b;
     min-height: 100vh;
     background-repeat: no-repeat;
@@ -19,27 +18,54 @@ body{
     width: 100vw;
     z-index: -1;
 }
+.container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: start;
+    justify-content: space-evenly;
+}
 #board{
-    height: 92vmin;
-    width: 90vmin;
+    height: 80vh;
+    width: 80vh;
     background: linear-gradient(rgb(137, 239, 137), rgb(216, 191, 132));
-    /* background-color: #4ab944; */
     border: 8px solid white;
     border-radius: 10px;
     display: grid;
     grid-template-rows: repeat(18,1fr);
     grid-template-columns: repeat(18,1fr)
 }
-
+.info{
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+}
 .head{
-    background-color: red;
-    border-radius: 50%;
+    background: linear-gradient(red,yellow);
+    border: 2px solid purple;
+    transform: scale(1.01);
+    border-radius:12px; 
 }
 .snake-body{
     background-color: purple;
-    border-radius: 50%;
+    border: .25vmin solid white;
+    border-radius: 12px;
 }
 .food{
-    background-color: yellow;
-    border-radius: 50%;
+    height: 100%;
+    width: 100%;
+    animation-name: pop;
+    animation-timing-function: ease;
+    animation-duration: 2s;
+    animation-delay: 0s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+}
+@keyframes pop {
+   0%{
+    transform: scale(0.8);
+   }
+   25%{
+    transform: scale(1);
+   }
 }
