--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,18 @@
-*{
+* {
     padding: 0;
     margin: 0;
 }
-body{
-    background-color: #3fcd3b;
+
+body {
+    background-color: #1D2326;
     min-height: 100vh;
     background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-#bg{
+
+#bg {
     position: absolute;
     top: 0;
     left: 0;
@@ -18,54 +20,96 @@ body{
     width: 100vw;
     z-index: -1;
 }
-.container{
+
+.container {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: start;
     justify-content: space-evenly;
 }
-#board{
+
+#board {
     height: 80vh;
     width: 80vh;
     background: linear-gradient(rgb(137, 239, 137), rgb(216, 191, 132));
-    border: 8px solid white;
+    border: 4px solid rgb(252, 252, 252);
     border-radius: 10px;
     display: grid;
-    grid-template-rows: repeat(18,1fr);
-    grid-template-columns: repeat(18,1fr)
+    grid-template-rows: repeat(18, 1fr);
+    grid-template-columns: repeat(18, 1fr)
 }
-.info{
+
+.info {
     color: white;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
 }
-.head{
-    background: linear-gradient(red,yellow);
+
+#attributes {
+    font-family: monospace;
+    position: absolute;
+    bottom: 5vh;
+    right: 5vw;
+    font-size: 0.8rem;
+    /* background-color: #8097A6; */
+    padding: 10px;
+    border-radius: 5px;
+    color: #ffffff;
+    box-shadow: 1px 2px 5px 1px rgba(255, 255, 255, 0.2);
+}
+
+a {
+    color: white;
+}
+
+a:hover {
+    opacity: 0.8;
+}
+
+.head {
+    background: linear-gradient(red, yellow);
     border: 2px solid purple;
     transform: scale(1.01);
-    border-radius:12px; 
+    border-radius: 12px;
 }
-.snake-body{
-    background-color: purple;
+
+.snake-body {
+    background-color: rgb(9, 231, 28);
     border: .25vmin solid white;
     border-radius: 12px;
 }
-.food{
+
+.food {
     height: 100%;
     width: 100%;
     animation-name: pop;
     animation-timing-function: ease;
-    animation-duration: 2s;
+    animation-duration: 3s;
     animation-delay: 0s;
     animation-iteration-count: infinite;
     animation-fill-mode: forwards;
 }
+
 @keyframes pop {
-   0%{
-    transform: scale(0.8);
-   }
-   25%{
-    transform: scale(1);
-   }
+    0% {
+        transform: scale(0.8);
+    }
+
+    25% {
+        transform: scale(1);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #board {
+        height: 50vh;
+        width: 50vh;
+    }
+
+    .container {
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
 }
