--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html,body {
     color: white;
     font-size: 50px;
     background: #521ed4;
-    padding: 0.8vw;
+    padding: 0.6vw;
     border-radius: 1vw;
     text-align: center;
 }
@@ -51,9 +51,11 @@ html,body {
 }
 
 .content {
+    height: 60vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
     gap: 40px;
     color: white;
     font-family: 'Courier New', Courier, monospace;
@@ -61,7 +63,7 @@ html,body {
 }
 .buttons{
     font-size: xx-large;
-    /* display: none; */
+    display: none;
 }
 
 #attributes {
@@ -122,10 +124,11 @@ a:hover {
 @media screen and (max-width: 768px) {
     #title{
         position: none;
+        font-size: large;
     }
     #board {
-        height: 50vh;
-        width: 50vh;
+        height: 40vh;
+        width: 40vh;
     }
 
     .container {
@@ -135,14 +138,16 @@ a:hover {
         gap: 10vw;
     }
     .content{
-        flex-direction: row;
-        gap: 100px;
+        gap: 20px;
     }
     #info{
-        font-size: 10px;
+        font-size: 8px;
     }
     .buttons{
+        transform: scale(1.5);
         display: block;
+        position: absolute;
+        right: 2vw;
     }
     #attributes{
         width: fit-content;
