--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ html,body {
 .content {
     height: 60vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: space-around;
     align-items: center;
     gap: 40px;
@@ -62,8 +62,21 @@ html,body {
     font-weight: bold;
 }
 .buttons{
-    font-size: xx-large;
-    display: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.buttons button {
+    background-color: #007BFF; 
+    border: none;
+    border-radius: 5px;
+    padding: 15px 20px;
+    font-size: 20px;
+    cursor: pointer;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    margin: 5px;
 }
 #touchpad{
     display: none;
@@ -136,21 +149,18 @@ a:hover {
 
     .container {
         flex-direction: column;
+        justify-content: center;
         align-items: center;
         padding: 20px;
-        gap: 8w;
+        gap: 5vw;
     }
     .content{
+        display: flex;
+        flex-direction: column;
         gap: 10px;
     }
     #info{
         font-size: 8px;
-    }
-    .buttons{
-        transform: scale(1.5);
-        display: block;
-        position: absolute;
-        right: 4vw;
     }
     #touchpad{
         display: flex;
